@@ -1,0 +1,52 @@
+name    = App-Nopaste
+author  = Shawn M Moore, <sartak@gmail.com>
+license = Perl_5
+copyright_holder = Shawn M Moore
+copyright_year = 2008
+
+[@Author::ETHER]
+Authority.authority = cpan:SARTAK
+Git::NextVersion.version_regexp = ^([\d._]+)(-TRIAL)?$
+Git::Tag.tag_format = %v%t
+Test::MinimumVersion.max_target_perl = 5.008003
+-remove = PodWeaver
+-remove = AutoPrereqs
+-remove = PodCoverageTests      ; TODO
+-remove = Test::PodSpelling     ; TODO
+-remove = Test::Pod::No404s     ; TODO
+-remove = Test::UnusedVars      ; TODO
+
+[ContributorsFromGit]
+
+[Prereqs / RuntimeRequires]
+WWW::Mechanize = 0
+Module::Pluggable = 0
+Getopt::Long::Descriptive = 0.090
+Class::Load = 0
+URI::Escape = 0
+JSON = 0
+
+[OptionalFeature / pastebin]
+-description = pastebin.com support
+-always_recommend = 1
+-default = 0
+WWW::Pastebin::PastebinCom::Create = 0
+
+[OptionalFeature / Clipboard]
+-description = copying of URLs with -x/--copy
+-always_recommend = 1
+-default = 0
+Clipboard = 0
+
+[OptionalFeature / scp]
+-description = copy files to remote server with scp
+-always_recommend = 1
+-default = 1
+File::Temp = 0
+File::Spec = 0
+
+[OptionalFeature / browser]
+-description = open URLs in a browser
+-always_recommend = 1
+-default = 0
+Browser::Open = 0
