@@ -9,8 +9,6 @@ use Class::Load 'load_class';
 use base 'Exporter';
 our @EXPORT_OK = 'nopaste';
 
-our $VERSION = '0.92';
-
 sub nopaste {
     # process arguments
     # allow "nopaste($text)"
